--- a/app/views/supervisions/new.html.haml
+++ b/app/views/supervisions/new.html.haml
@@ -8,4 +8,4 @@
 
   = form_for([@group, @supervision]) do |f|
     = submit_tag t("supervisions.new.create_new")
-    = link_to t("supervisions.new.back_to_groups"), all_groups_path
+    = link_to t("supervisions.new.back_to_groups"), groups_path
