--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -3,7 +3,7 @@
   %section#available_groups
     %h2 Available groups
     = t(".groups_hint", :default => "Open groups you can join right away, closed groups you request membership and you have to wait for the group founder to approve your request.")
-    =form_tag all_groups_path, :method => :get, :remote => true do
+    =form_tag groups_path, :method => :get, :remote => true do
       =label_tag :filter
       =select_tag :filter, options_for_select(@filters.map{|k| [t("groups.filters.#{k}"), k ] }, params[:filter] )
       =submit_tag "Filter"
