notify group owner on group show page that there are requested memberships

--- a/app/views/founder/groups/edit.html.haml
+++ b/app/views/founder/groups/edit.html.haml
@@ -1,9 +1,9 @@
-%article#group
+%article
   = link_to(t(".back"), @group)
   = render "form"
 
   %h2= t(".membership")
-  #members
+  .group_members
     %ul
       - @group.active_members.without(@group.founder).each do |user|
         %li
