--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -179,23 +179,26 @@ a.signup_button
   margin-right: auto
   overflow: auto
 
+.info_box
+  background-color: $secondary-color-b-5
+  text-align: center
+  width: 50%
+  padding: 2px
+  margin: 5px auto
+  border: 1px solid black
+
+.small
+  font-size: small
+
+.group_members
+  +no-bullets
+  ul
+    padding: 0
+
 #group
-  .small
-    font-size: small
+
   h1
     margin: 0
-  #active_supervision
-    background-color: #80FF00
-    text-align: center
-    width: 50%
-    padding: 2px
-    margin: 5px auto
-    border: 1px solid black
-
-  #members
-    +no-bullets
-    ul
-      padding: 0
 
   #group_content
     width: 60%
