--- a/app/views/groups/_navigation.html.haml
+++ b/app/views/groups/_navigation.html.haml
@@ -1,10 +1,10 @@
 - if current_user.active_member_of?(group)
   %li= link_to_group_supervision(t(".links.session", :default => "Session"), group)
   %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group)
-  - unless group.founder == current_user
-    %li= button_to t(".links.leave", :default => "leave"), group_membership_path(group), :method => :delete
-  - if group.founder == current_user
+  - if group.founded_by?(current_user)
     %li= link_to t(".links.edit", :default => "Edit"), edit_founder_group_path(group)
+  - else
+    %li= button_to t(".links.leave", :default => "leave"), group_membership_path(group), :method => :delete
 - elsif current_user.invited_member_of?(group)
   %li= button_to t(".links.accept", :default => "accept"), group_invitation_path(group), :method => :put
   %li= button_to t(".links.reject", :default => "reject"), group_invitation_path(group), :method => :delete
