--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,14 +3,14 @@
     %header
       %h1
         = @group.name
-        - if @group.founder == current_user
+        - if @group.founded_by?(current_user)
           %span.small= link_to t(".edit", :default => "edit"), edit_founder_group_path(@group)
       %p.description= @group.description
     - if @group.supervisions.current
-      #active_supervision.round
+      .info_box.round
         = t(".active_supervision_html", :url => link_to_group_supervision(t(".join"), @group))
 
-    #members
+    .group_members
       %ul
         %li
           = gravatar_for(@group.founder, :size => 30)
@@ -20,6 +20,9 @@
           %li
             = gravatar_for(user, :size => 30)
             = link_to(user.name, user)
+      - if @group.founded_by?(current_user) and @group.requested_memberships.any?
+        .info_box.round
+          = t(".requested_memberships_info_html", :count => @group.requested_memberships.count, :url => link_to(t(".manage"), edit_founder_group_path(@group)))
 
     - if @group.supervisions.finished.present?
       %h3= t(".history")
@@ -30,7 +33,7 @@
     - if @group.active_members.include?(current_user)
       - unless @group.supervisions.current
         = link_to t(".new_supervision"), new_group_supervision_path(@group)
-      - unless @group.founder == current_user
+      - unless @group.founded_by?(current_user)
         = button_to t(".leave_group"), group_membership_path(@group), :method => :delete
 
   %section#chat_room
