--- a/app/views/topics/_form.html.haml
+++ b/app/views/topics/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([supervision, Topic.new]) do |f|
+= form_for([supervision, @topic]) do |f|
   = f.text_area :content
   %p.inline-hints= t("topics.form.content_hint")
   = submit_tag t("topics.form.submit")
