--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -201,8 +201,11 @@ a.signup_button
     margin: 0
 
   #group_content
-    width: 60%
+    width: 50%
     float: left
+  section#chat_room
+      width: 50%
+      float: right
 
 .profile img.gravatar
   border: 1px solid #999
