authenticate user to group channel

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,4 +1,4 @@
-%article#group
+%article#group{:data => {:token => @group_token, :group_id => @group.id} }
   %section#group_content
     %header
       %h1
