display notifications on groups#list and profile pages

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,4 +1,4 @@
-%article
+%article.group_notification{:data => {:groups => current_user.generate_group_subscription_tokens} }
   %h1 Groups
   %section#available_groups
     %h2 Available groups
