--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-%article
+%article.group_notification{:data => {:groups => current_user.generate_group_subscription_tokens} }
   %header
     %h1
       Hi
