fixed displaying buttons depending on group status

--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,4 +1,4 @@
-.group_brief
+.group_brief{:id => "group_#{group.id}"}
   .inner
     .title= link_to group_name(group, current_user), group
     .description
