--- a/app/views/groups/_navigation.html.haml
+++ b/app/views/groups/_navigation.html.haml
@@ -1,8 +1,8 @@
-- if group.supervisions.current
-  = link_to_group_supervision(t("supervisions.join_active", :default => "Join active supervision"), group)
+- if current_user.active_member_of?(group) && group.supervisions.current
+  %li= link_to_group_supervision(t("supervisions.join_active", :default => "Join active supervision"), group)
 - elsif current_user.requested_member_of?(group)
   %li= t(".requested_info", :default => "Awaiting group owner acceptance")
-- elsif group.public?
+- elsif group.public? && !current_user.groups.include?(group)
   %li= button_to t(".links.join", :default => "join"), group_membership_path(group)
-- elsif group.closed?
+- elsif group.closed? && !current_user.groups.include?(group)
   %li= button_to t(".links.request", :default => "request membership"), group_requests_path(group)
