use compass liquid layout.

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -1,6 +1,6 @@
 // Import the non-default scaffolding module to help us get started.
 @import blueprint/scaffolding
-
+@import blueprint/liquid
 +blueprint-typography
 +blueprint-utilities
 +blueprint-debug
