--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -1,13 +1,7 @@
 // Here is where you can define your constants for your application and to configure the blueprint framework.
 // Feel free to delete these if you want keep the defaults:
+$blueprint-liquid-container-width: 90%
 
-$blueprint-grid-columns: 24
-$blueprint-container-size: 950px
-$blueprint-grid-margin: 10px
-
-// Use this to calculate the width based on the total width.
-// Or you can set $blueprint-grid-width to a fixed value and unset $blueprint-container-size -- it will be calculated for you.
-$blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin
 
 $border-radius: 10px
 
