--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -97,7 +97,7 @@ nav#home
 
   article
     +push(1)
-    +column($blueprint-grid-columns - 2, true)
+    +column($blueprint-liquid-grid-columns - 0.5, true)
     +prepend-top
     +append-bottom
 
