--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -211,6 +211,10 @@ a.signup_button
   border: 1px solid #999
   margin-bottom: -15px
 
+#user_avatar
+  width: 100px
+  margin-right: 10px
+  float: left
 div
   &.field, &.actions
     margin-bottom: 10px
