reorganized private profile page

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -215,6 +215,12 @@ a.signup_button
   width: 100px
   margin-right: 10px
   float: left
+#user_info
+  width: 39%
+  float: left
+  form
+    width: 70%
+    margin-top: 30px
 div
   &.field, &.actions
     margin-bottom: 10px
