added show_email field to user

--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -1,5 +1,6 @@
 = f.input :name
 = f.input :email, :input_html => { :type => "email" }
+= f.input :show_email
 = f.input :password, :as => :password
 = f.input :password_confirmation, :as => :password
 = f.input :passcode, :as => :password
