--- a/app/views/users/public.html.haml
+++ b/app/views/users/public.html.haml
@@ -2,4 +2,5 @@
   %section#user_avatar= gravatar_for(@user, :size => 100)
   %section#user_info
     %h1= @user.name
-    %p= @user.email
+    -if @user.show_email?
+      %p= @user.email
