added status icons

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -312,3 +312,17 @@ section#available_groups, section#avatar_settings
   float: left
 section#user_groups
   float: right
+
+/* CSS for status icons
+.status
+  width: 10px
+  height: 11px
+  background: url("../../images/status_icons.png") no-repeat
+  float:left
+  display:inline
+.status.available
+  background-position-y: 0%
+.status.idle
+  background-position-y: 50%
+.status.unavailable
+  background-position-y: 100%
