Added different shapes for chat activities

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -318,10 +318,14 @@ section#user_groups
   width: 10px
   height: 10px
   display: inline-block
-  +border-radius(5px)
 .status.available
   background-color: #ACDC32
+  +border-radius(5px)
 .status.idle
-  background-color: #E69B22
+  border-color: transparent transparent #E69B22
+  border-style: solid
+  border-width: 0 6px 6px
+  width: 0px
+  height: 0px
 .status.unavailable
   background-color: #A9A9A9
