--- a/app/views/topics/_form.html.haml
+++ b/app/views/topics/_form.html.haml
@@ -6,5 +6,5 @@
     %p= t("supervision.waiting_for_members", :default => "Waiting for other members.")
   %div{:"data-show-in-state" => "gathering_topics"}
     %p.inline-hints= t("topics.form.content_hint")
-    = submit_tag t("topics.form.submit")
+    = submit_tag t("topics.form.submit"), {:class => "inputRequired"}
     =link_to t("topics.form.create_empty"), supervision_topics_path(supervision, :format => :json), {:method => :post, :remote => true}
