--- a/app/views/topics/_supervision_topics_votes.html.haml
+++ b/app/views/topics/_supervision_topics_votes.html.haml
@@ -11,4 +11,4 @@
         .content
           %p= topic_content(topic)
           = form_for([topic, Vote.new], :html => {:id => "new_topic_#{topic.id}_vote"}) do |f|
-            = f.submit t("topics.index.topic_vote"), :disabled => supervision.voted_on_topic?(current_user), :id => "topic_#{topic.id}_vote_submit"
+            = f.submit t("topics.index.topic_vote"), :disabled => supervision.voted_on_topic?(current_user), :id => "topic_#{topic.id}_vote_submit", :class => "inputRequired"
