add dedicated away dialog for topic owner

--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -144,3 +144,5 @@
 
   #away-dialog-message
     You will be removed from supervision after 1 minute. Are you there?
+  #away-dialog-topic-owner
+    Sample message for topic owner
