added countdown timer

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -195,3 +195,10 @@
   display: none
 #away-dialog-topic-owner
   display: none
+.countdown_timer
+  margin: 0 auto
+  width:  20px
+  height: 20px
+  padding: 15px
+  background-image:  url("../../images/timer.png")
+  font-weight: bold
