--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,11 +5,9 @@
     %meta{:charset => "utf-8"}
     = csrf_meta_tag
     = javascript_meta_information
-
-    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    = stylesheet_link_tag "application"
     /[if lt IE 8]
-      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
+      = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
     /[if lt IE 9]
       :javascript
         var e = ("abbr,article,aside,audio,canvas,datalist,details," +
@@ -18,7 +16,7 @@
         for (var i = 0; i < e.length; i++) {
             document.createElement(e[i]);
         }
-    = javascript_include_tag :defaults
+    = javascript_include_tag "application"
   %body{:id => id_for_body}
     %section#page
       = render "layouts/header", :title => @title
