--- a/app/views/pages/home_guest.html.haml
+++ b/app/views/pages/home_guest.html.haml
@@ -9,4 +9,4 @@
   = render 'about'
 
   %footer
-    = link_to t(".links.signup", :default => "Sign up now!"), signup_path, :class => "signup_button"
+    = link_to t(".links.signup", :default => "Sign up now!"), new_user_registration_path, :class => "signup_button"
