--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,4 +11,4 @@
       = f.commit_button t(".signup", :default => "Sign up")
 
   %footer
-    = link_to t(".links.signin", :default => "Sign in!"), signin_path, :class => "signin_button"
+    = link_to t(".links.signin", :default => "Sign in!"), new_user_session_path, :class => "signin_button"
