fixed assets routes

--- a/app/assets/stylesheets/partials/_supervision.sass
+++ b/app/assets/stylesheets/partials/_supervision.sass
@@ -200,5 +200,5 @@
   width:  20px
   height: 20px
   padding: 15px
-  background-image:  url("../../images/timer.png")
+  background-image:  url("/assets/timer.png")
   font-weight: bold
