don't use current_user? method

--- a/app/views/topics/_supervision_topics_votes.html.haml
+++ b/app/views/topics/_supervision_topics_votes.html.haml
@@ -4,7 +4,7 @@
   .list
     - supervision.topics.votable.each do |topic|
       %div.form[topic]
-        .user{ :class => ("you" if current_user?(topic.user)) }
+        .user{ :class => ("you" if topic.user === current_user) }
           = link_to topic.user, :title => topic.user do
             = gravatar_for(topic.user)
             .name= topic.user
