make supervision#new page obsolete

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -37,7 +37,7 @@
 
     - if @group.active_members.include?(current_user)
       - unless @group.supervisions.current
-        = link_to t(".new_supervision"), new_group_supervision_path(@group), :remote => true
+        = link_to t(".new_supervision"), group_supervisions_path(@group), :method => :post
       - unless @group.founded_by?(current_user)
         = button_to t(".leave_group"), group_membership_path(@group), :method => :delete
 
