--- a/app/views/founder/groups/_form.html.haml
+++ b/app/views/founder/groups/_form.html.haml
@@ -1,6 +1,6 @@
 = semantic_form_for [:founder, @group] do |f|
   = f.inputs do
-    = f.input :name
+    = f.input :name, :required => false
     = f.input :description, :required => false
     = f.input :closed
 
