Supervision: if topic owner or group member leaves the supervision page, display notice: The current supervision will end if you leave this page, please consider opening a second browser window instead.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,7 @@
             document.createElement(e[i]);
         }
     = javascript_include_tag "application"
+    = yield(:head)
   %body{:id => id_for_body}
     %section#page
       = render "layouts/header", :title => @title
